src/objects/Preference__c.object
<CustomObject>
    <description>Records Account or Contact Preferences, including Preference information or other details such as: Interests, Appeals, Benefits, Communications, Volunteers, Ratings, Education, Board/Trustee.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>18-digit Account ID to be used in Matching Rules.</description>
        <inlineHelpText>18-digit Account ID to be used in Matching Rules.</inlineHelpText>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to the Preference being entered.</description>
        <inlineHelpText>Account related to the Preference being entered.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this preference still active and valid?</description>
        <inlineHelpText>Is this preference still active and valid?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Indicates the highest level differentiator of a Preference (Interests, Appeals, Benefits, Communications, Etc). Controlling Field for Subcategory.</description>
        <inlineHelpText>Indicates the highest level differentiator of a Preference (Interests, Appeals, Benefits, Communications, Etc). Controlling Field for Subcategory.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <description>Automatically populated value which signifies the pick list values contained within the Category, Subcategory, Type and Subtype fields.</description>
        <inlineHelpText>Automatically populated value which signifies the pick list values contained within the Category, Subcategory, Type and Subtype fields.</inlineHelpText>
        <label>Code Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments, notes and other information related to this Preference record.</description>
        <inlineHelpText>Comments, notes and other information related to this Preference record.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>18-digit Contact ID to be used in Matching Rules.</description>
        <inlineHelpText>18-digit Contact ID to be used in Matching Rules.</inlineHelpText>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to the Preference record.</description>
        <inlineHelpText>Contact related to the Preference record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Indicates the date this preference ends and ceases to be valid.</description>
        <inlineHelpText>Indicates the date this preference ends and ceases to be valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Indicates the date this preference begins.</description>
        <inlineHelpText>Indicates the date this preference begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Specifies your confidence that the Preference is accurate.</description>
        <inlineHelpText>Specifies your confidence that the Preference is accurate.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Implied</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>User Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <description>Indicates the second highest level differentiator of a Preference. Controlled by the Category field, this is the controlling field for the Type field.</description>
        <inlineHelpText>Indicates the second highest level differentiator of a Preference. Controlled by the Category field, this is the controlling field for the Type field.</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Indicates the fourth and lowest level differentiator of a Preference, controlled by the Category, Subcategory and Type fields.</description>
        <inlineHelpText>Indicates the fourth and lowest level differentiator of a Preference, controlled by the Category, Subcategory and Type fields.</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates the third highest level differentiator of a Preference. Controlled by the Category and Subcategory fields, this is the controlling field for the Subtype field.</description>
        <inlineHelpText>Indicates the third highest level differentiator of a Preference. Controlled by the Category and Subcategory fields, this is the controlling field for the Subtype field.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subcategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Holds any additional Value information related to the Preference selection.</description>
        <inlineHelpText>Holds any additional Value information related to the Preference selection.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>